# teamwork-transportsystem

./: .gitignore  Protokol.txt  README.md  drawio-architecture.xml  drawio-architecture01.xml  drawio-architecture02.xml  teamphasen.xml
Documentation/: .gitignore  Documentation.aux  Documentation.dvi  Documentation.out  Documentation.tex  Documentation.toc
Documentation/Images/: architecture01.pdf_tex  architecture02.pdf_tex  teamphasen.pdf_tex
Tastereingabe/: Tastereingabe.ino
rqt_turtlebutler/: package.xml  plugin.xml  setup.py
rqt_turtlebutler/include/rqt_turtlebutler/: TurtleButler.h
rqt_turtlebutler/scripts/: rqt_turtlebutler
rqt_turtlebutler/src/rqt_turtlebutler/: TurtleButler.cpp
turtlebutler/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
turtlebutler/devel/include/: ui_TurtleButler.h
turtlebutler/devel/lib/pkgconfig/: rqt_turtlebutler.pc
turtlebutler/devel/lib/python2.7/dist-packages/rqt_turtlebutler/: __init__.py
turtlebutler/devel/share/rqt_turtlebutler/cmake/: rqt_turtlebutlerConfig.cmake
turtlebutler/rqt_turtlebutler/: CMakeLists.txt  package.xml  plugin.xml
turtlebutler/rqt_turtlebutler/config/: turtlebots.txt
turtlebutler/rqt_turtlebutler/include/rqt_turtlebutler/: TurtleButler.h
turtlebutler/rqt_turtlebutler/scripts/: rqt_turtlebutler
turtlebutler/rqt_turtlebutler/src/rqt_turtlebutler/: TurtleButler.cpp  TurtleButler.ui
turtlebutler/src/rqt_turtlebutler/: CMakeLists.txt  mainpage.dox  plugin.xml
turtlebutler/src/rqt_turtlebutler/scripts/: rqt_turtlebutler
turtlebutler/src/rqt_turtlebutler/src/rqt_turtlebutler/: TurtleButler.cpp  TurtleButler.h  TurtleButler.ui  TurtleButlerWidget.ui
working_gui/turtlebutler/rqt_turtlebutler/: package.xml  setup.py
working_gui/turtlebutler/rqt_turtlebutler/include/rqt_turtlebutler/: TurtleButler.h
working_gui/turtlebutler/rqt_turtlebutler/src/rqt_turtlebutler/: TurtleButler.cpp  TurtleButler.ui
